test/message/vm_display_runtime_error.out
beginning
test.vm:1
throw new Error("boo!")
^

Error: boo!
    at test.vm:1:7
    at Script.runInThisContext (node:vm:*)
    at Object.runInThisContext (node:vm:*)
    at Object.<anonymous> (*test*message*vm_display_runtime_error.js:*)
    at ModuleCompile (node:internal/modules/cjs/loader:*)
    at Module._compile (node:internal/modules/cjs/loader:*)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:*)
    at Module.load (node:internal/modules/cjs/loader:*)
    at Function.Module._load (node:internal/modules/cjs/loader:*)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:*)
test.vm:1
throw new Error("spooky!")
^

Error: spooky!
    at test.vm:1:7
    at Script.runInThisContext (node:vm:*)
    at Object.runInThisContext (node:vm:*)
    at Object.<anonymous> (*test*message*vm_display_runtime_error.js:*)
    at ModuleCompile (node:internal/modules/cjs/loader:*)
    at Module._compile (node:internal/modules/cjs/loader:*)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:*)
    at Module.load (node:internal/modules/cjs/loader:*)
    at Function.Module._load (node:internal/modules/cjs/loader:*)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:*)
